Fix size of picture debugger info when there are only a few ops.
If there are only a few ops in the debugger op list, the picture info
panel would be stretched. This patch makes the ops list stretch instead
which looks much better.

BUG=

Review URL: https://codereview.appspot.com/11500043

--- a/src/cc/picture_debugger.css
+++ b/src/cc/picture_debugger.css
@@ -21,7 +21,7 @@ picture-debugger > left-panel {
 }
 
 picture-debugger > left-panel > picture-info {
-  -webkit-flex: 1 0 auto;
+  -webkit-flex: 0 0 auto;
   padding-top: 2px;
 }
 
